fix(wrap):add the wrap property to the header, galery and hero section

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ ul {
     background-color: #1f2937;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .header p {
     font-size: 24px;
@@ -41,6 +42,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     gap: 24px;
+    flex-wrap: wrap;
 }
 .hero h1 {
     color: #f9faf8;
@@ -80,6 +82,7 @@ ul {
     flex-direction: column;
     align-items: center;
     padding: 80px;
+    
 }
 .information h1 {
     padding-bottom: 60px;
@@ -88,7 +91,7 @@ ul {
 .galery {
     display: flex;
     gap:42px;
-
+    flex-wrap: wrap;
 }
 .galery p {
     color: #1f2937;
